# steam-screenshot-reporter

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  do.sh  docker-compose.yml  docker-entrypoint-dev.sh  docker-entrypoint.sh  main.py  manage.py  pyproject.toml  pytest.ini  setup.cfg  uwsgi.ini
reporter/: models.py  settings.py  wsgi.py
reporter/management/commands/: __init__.py  check_monitored_hubs.py  check_naughtiness.py  report_naughties.py  verify_takedowns.py
reporter/migrations/: 0001_initial.py  0001_squashed_0007_steamscreenshot_accidental_entry_and_more.py  0002_alter_steamscreenshot_app.py  0002_alter_steamscreenshot_id.py  0003_alter_steamscreenshot_is_naughty_and_more.py  0004_remove_steamscreenshot_is_naughty_and_more.py  0005_steamscreenshot_app.py  0006_alter_steamscreenshot_naughty_score.py  0007_steamscreenshot_accidental_entry_and_more.py
reporter_tests/fixtures/: auth.json
